  Contributors
---------------------------

Dmitry Baikov
Steven Chamberlain
Thom Johansen
Thibault LeMeur
Pieter Palmers
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt

---------------------------
  Jackdmp changes log
---------------------------

2009-03-03 Stephane Letz  <letz@grame.fr>

	* More robust profiling tools when clients come and go.

2009-03-01 Stephane Letz  <letz@grame.fr>

	* Raise default port number to 1024.

2009-02-27 Stephane Letz  <letz@grame.fr>

	* Improve generated gnuplot files for adapting code.

2009-02-25 Stephane Letz  <letz@grame.fr>

	* Major cleanup in adapter code.

2009-02-25 Stephane Letz  <letz@grame.fr>

	* Fix JackNetDriver::Close method.
        * For audio device reservation, add card_to_num function.
        * Fix buffer size and sample rate handling in JackAlsaAdapter.
        * Add control for adapter ringbuffer size.
	* Fix JackAlsaAdapter.h for 64 bits compilation.

2009-02-23 Stephane Letz  <letz@grame.fr>

	* Another fix in systemdeps.h and types.h: jack_time_t now uniquely defined in types.h.
	* Move generic code and data in JackNetInterface and JackNetMasterInterface classes.
        * First version of D-Bus based audio device reservation.

2009-02-20 Stephane Letz  <letz@grame.fr>

	* Add InitConnection and InitRendering methods in JackNetSlaveInterface, better packet type checking in JackNetSlaveInterface::SyncRecv.
	* Change fMulticastIP handling in JackNetInterface.
        * Cleanup systemdeps.h on Windows.

2009-02-17 Stephane Letz  <letz@grame.fr>

	* Fix the mutex/signal classes on Windows.
        * Client incorrect re-naming fixed: now done at fifo level only.

2009-02-16 Stephane Letz  <letz@grame.fr>

	* Rework the mutex/signal classes. Use them in JackMessageBuffer.

2009-02-11 Stephane Letz  <letz@grame.fr>

	* Merge Solaris branch back on trunk.