@@ -23,6 +23,10 @@ Michael Voigt
   Jackdmp changes log
 ---------------------------
 
+2009-03-05 Stephane Letz  <letz@grame.fr>
+
+	* Support for BIG_ENDIAN machines in NetJack2 for transport data.
+
 2009-03-03 Stephane Letz  <letz@grame.fr>
 
 	* More robust profiling tools when clients come and go.
